[fix] fix TreeView component slot missing and add css properties like overflow, box-sizing

--- a/packages/common-theme/TreeView.scss
+++ b/packages/common-theme/TreeView.scss
@@ -9,6 +9,8 @@
   position: relative;
   border-radius: 5px;
   background: var(--fv-TreeView--background);
+  overflow: auto;
+  box-sizing: border-box;
   ul,
   li {
     list-style: none;
